[project]
name = "agentic-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.10",
    "langgraph-cli[inmem]>=0.3.3",
    "uvicorn>=0.34.3",
    "watchdog[inmem]>=6.0.0",
]
